--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@
     <canvas id="canvas" width="150" height="150"></canvas>
 </body>
 <script src="scripts/require.js"></script>
-<script>require( ['scripts/main'], function() {} );</script>
+<script>require( ['scripts/index'], function() {} );</script>
 </html>
