--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
             background: white;
         }
     </style>
-    
+
 </head>
 
 <body>
     <canvas id="canvas" width="150" height="150"></canvas>
+    <div id="End" style="display:none">
+        <h1>You loose !</h1>
+    </div>
 </body>
 <script src="scripts/require.js"></script>
-<script>require( ['scripts/index'], function() {} );</script>
+<script>require(['scripts/index'], function () { });</script>
+
 </html>
