no more using require js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>You loose !</h1>
     </div>
 </body>
-<script src="scripts/require.js"></script>
-<script>require(['scripts/index'], function () { });</script>
+<script src="./scripts/modules.js"></script>
+<script src="./scripts/index.js"></script>
 
 </html>
